--- a/app/src/main/res/layout/activity_add_food.xml
+++ b/app/src/main/res/layout/activity_add_food.xml
@@ -143,6 +143,7 @@
         android:layout_marginTop="8dp"
         android:background="@android:color/holo_blue_light"
         android:fontFamily="serif"
+        android:onClick="onSaveMealButtonClick"
         android:text="SAVE MEAL"
         android:textAlignment="center"
         android:textSize="18sp"
