--- a/app/src/main/res/layout/activity_edit_food.xml
+++ b/app/src/main/res/layout/activity_edit_food.xml
@@ -32,6 +32,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="serif"
         android:text="Enter Meal"
         android:textAlignment="center"
         android:textSize="15sp"
@@ -50,6 +51,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="serif"
         android:text="Select Date"
         android:textAlignment="center"
         android:textSize="15sp"
@@ -111,6 +113,7 @@
         android:layout_marginStart="8dp"
         android:background="@android:color/holo_blue_light"
         android:fontFamily="serif"
+        android:onClick="onSaveMealButtonTwoClick"
         android:text="SAVE MEAL"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -123,13 +126,15 @@
 
     <Button
         android:id="@+id/deleteMealButton"
-        android:layout_width="143dp"
+        android:layout_width="146dp"
         android:layout_height="52dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@android:color/holo_red_light"
+        android:fontFamily="serif"
+        android:onClick="onDeleteMealButtonClicked"
         android:text="DELETE MEAL"
         android:textAlignment="center"
         android:textSize="18sp"
