final colours and layout adjusted

--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/breakfastText"
-        android:layout_width="128dp"
+        android:layout_width="114dp"
         android:layout_height="37dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -19,7 +19,7 @@
         android:text="breakfast"
         android:textAlignment="center"
         android:textColor="@color/random"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,8 +30,9 @@
 
     <TextView
         android:id="@+id/consumedText"
-        android:layout_width="110dp"
-        android:layout_height="36dp"
+        android:layout_width="119dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:fontFamily="serif"
@@ -40,10 +41,12 @@
         android:textColor="@android:color/holo_blue_bright"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.084"
+        app:layout_constraintHorizontal_bias="0.134"
         app:layout_constraintStart_toEndOf="@+id/breakfastText"
-        app:layout_constraintTop_toTopOf="@+id/breakfastText" />
+        app:layout_constraintTop_toTopOf="@+id/breakfastText"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/dateText"
